<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_error_outline_black_24dp"
        android:title="@string/patients_notification"/>

    <item
        android:id="@+id/xreosima_ilika"
        android:icon="@drawable/item"
        android:title="@string/xreosima_ilika_string"/>


<!--    <item-->
<!--        android:id="@+id/oles_oi_sinexeis_metriseis"-->
<!--        android:icon="@drawable/icon_measurement"-->
<!--        android:title="@string/sinex_metriseis_oles" />-->

    <item
        android:id="@+id/oles_oi_statheres_metriseis"
        android:icon="@drawable/icon_dialysis"
        android:title="@string/stath_metriseis_oles" />

    <item
        android:id="@+id/medicine_sinedrias"
        android:icon="@drawable/drug_icon"
        android:title="@string/farmakeutiki_agogi_sinedrias" />



    <item
        android:id="@+id/efapax_medicine"
        android:icon="@drawable/drug_icon"
        android:title="@string/efapax_farmaka" />


</menu>